...
                    shape = shape,
                )
                .clickable(
                    role = Role.Button,
                    onClick = trigger,
                )
                .testTag("article_read_story")
                .padding(horizontal = 18.dp),
        contentAlignment = Alignment.Center,
    ) {
        Text(
            text = "Read Story",
            modifier = Modifier.fillMaxWidth(),
...
